--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,30 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Lato');
+*{
+    font-family: Lato;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body{
+    margin: 0;
+    padding: 0;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.active{
+    display: flex!important;
+}
+.disabled{
+    display: none!important;
+}
+.ml-15{
+    margin-left: 15px;
+}
+.mr-15{
+    margin-right: 15px;
+}
+.shadow{
+    -webkit-box-shadow: 10px 9px 12px -3px rgba(0, 0, 0, 0.54);
+    -moz-box-shadow: 10px 9px 12px -3px rgba(0, 0, 0, 0.54);
+    box-shadow: 10px 9px 12px -3px rgba(0, 0, 0, 0.54);
 }
