--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.navbar{
+:local(.navbar){
     height: 60px;
     width: 100%;
     box-sizing: border-box;
@@ -9,48 +9,48 @@
     opacity: 0.6;
     justify-content: flex-end;
   }
-  .add-event{
-    cursor: pointer;
-    width: 40px;
-    font-size: 32px;
-    text-align: center;
-    color: white;
-    background: #26bd26;
-  }
-  .profile{
-    padding-left: 20px;
-  }
+:local(.addEvent){
+  cursor: pointer;
+  width: 40px;
+  font-size: 32px;
+  text-align: center;
+  color: white;
+  background: #26bd26;
+}
+:local(.profile){
+  padding-left: 20px;
+}
+
+:local(.profileName){
+  font-size: 20px;
+  line-height: 65px;
+}
+
+:local(.profileImg){
+  width:40px;
+  height: 40px;
+  display: inline-block;
+  background: cadetblue;
+}
+
+:local( .burger){
+  width: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+:local(.burger>span){
+  height: 3px;
+  width: 30px;
+  margin: 5px 0;
+  background: white
+}
   
-  .profile-name{
-    font-size: 20px;
-    line-height: 65px;
-  }
-  
-  .profile-img{
-    width:40px;
-    height: 40px;
-    display: inline-block;
-    background: cadetblue;
-  }
-  
-  .burger{
-    width: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .burger>span{
-    height: 3px;
-    width: 30px;
-    margin: 5px 0;
-    background: white
-  }
-  
-  .registrate-button{
-    padding: 10px;
-    align-self: flex-end;
-    background: #f4f5f7;
-    border-radius: 3px;
-    border: none;
-  }
+:local(.registrateButton){
+  padding: 10px;
+  align-self: flex-end;
+  background: #f4f5f7;
+  border-radius: 3px;
+  border: none;
+}
