--- a/src/Pages/Home/components/EventList/EventList.css
+++ b/src/Pages/Home/components/EventList/EventList.css
@@ -1,9 +1,9 @@
-.event-list-search{
+:local(.eventListSearch){
     max-width: 400px;
     width: 100%;
   }
   
-.event-list{
+:local(.eventList){
     height: 300px;
     width: 100%;
     max-width: 400px;
@@ -13,7 +13,7 @@
     background: #3f51b5ab;
   }
   
-.event-list-container{
+:local(.eventListContainer){
     width: 100%;
     display: flex;
     align-items: center;
@@ -22,10 +22,26 @@
     justify-content: center;
   }
 
-  .event-list-header{
+  :local(.eventListHeader){
     position: relative;
     margin: 0;
     align-self: center;
     z-index: 3;
     top: -20px;
   }
+
+    /* Refresh Button */
+
+    :local(.viewAll){
+      font-size: 12px;
+      color: gray;
+      cursor: pointer;
+      display: inline-block;
+      margin-top: 10px;
+    }
+  
+    :local(.viewAll:hover){
+    text-decoration: underline;
+    }
+  
+    /* End Refresh Button */
