--- a/src/Pages/Home/components/MainContent/MainContent.css
+++ b/src/Pages/Home/components/MainContent/MainContent.css
@@ -1,14 +1,6 @@
 /* General Styles */
-
-.main-page{
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    background: #b1c7e8;
-    
-  }
   
-.main-content{
+  :local(.mainContent){
     display: flex;
     padding-top: 85px;
     justify-content: space-around;
@@ -18,29 +10,13 @@
 
 /* Button 'Create' */
 
-.addNewEvent-create-button{
+:local(.addNewEventCreateButton){
     align-self: center;
     padding: 10px;
     background: #42ca9d;
     border-radius: 3px;
     border: none;
     color: white;
-  
   }
 
   /* End Button 'Create' */
-
-  /* Refresh Button */
-
-  .viewAll{
-    font-size: 12px;
-    color: gray;
-    cursor: pointer;
-    display: inline-block;
-    margin-top: 10px;
-  }
-  .viewAll:hover{
-  text-decoration: underline;
-  }
-
-  /* End Refresh Button */
