--- a/src/Pages/Home/components/EventListItem/EventListItem.css
+++ b/src/Pages/Home/components/EventListItem/EventListItem.css
@@ -1,4 +1,7 @@
 :local(.eventItem){
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     padding-left: 20px;
     line-height: 40px;
     font-size: 15px;
@@ -9,4 +12,3 @@
     background: #3f51b5ab;
     border-bottom: 1px solid #00000061;
   }
-  
