--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -54,3 +54,12 @@
   border-radius: 3px;
   border: none;
 }
+
+:local(.roomsButton){
+  background: #4bc4f7;
+  border: none;
+  color: #fff;
+  width: 40px;
+  font-size: 32px;
+  margin-right: 20px;
+}
