--- a/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
+++ b/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
@@ -47,6 +47,19 @@
     max-width: 500px;
   }
 
+  .add-me-button{
+    background: none;
+    border: none;
+    color: white;
+    text-decoration: underline;
+    margin-bottom: 20px;
+    margin-right: 0;
+    margin-left: auto;
+    position: relative;
+    cursor: pointer;
+
+  }
+
   .addNewEvent-cancel-button{
     padding: 10px;
     border-radius: 3px;
