--- a/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
+++ b/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
@@ -6,12 +6,15 @@
     align-items: center;
     justify-content: center;
     top: 0;
-    background: #00000069;
+    background: rgba(0,0,0,0.2);
   }
   .disable-button{
     background: gray;
     color: #b8b4b4;
     border: none;
+    text-transform: uppercase;
+    font-size: 20px;
+    border-radius: 4px;
   }
   .addNewEvent.active{
     display:flex!important;
@@ -24,8 +27,10 @@
 
   .addNewEvent-form{
     display: flex;
-    background: #5362b1ab!important;
+    background: #ffffff!important;
     padding: 20px;
+    border-radius: 4px;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12);
   }
   .addNewEvent-form-container{
     display: flex;
@@ -66,6 +71,7 @@
     border: none;
     background: rgb(248, 117, 117);
     color: white;
+    font-size: 20px;
   }
   .addNEwEvent-button-container{
     display: flex;
