--- a/src/Pages/Home/components/EventList/EventList.css
+++ b/src/Pages/Home/components/EventList/EventList.css
@@ -2,7 +2,7 @@
     max-width: 400px;
     width: 100%;
   }
-  
+
 :local(.eventList){
     height: 300px;
     width: 100%;
@@ -10,18 +10,19 @@
     align-self: center;
     overflow-y: auto;
     position: relative;
-    background: #3f51b5ab;
-    -ms-overflow-style: none; 
+    background: #2196f3;
+    -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12);
   }
-  
+
 :local(.eventListContainer){
-    width: 100%;
     display: flex;
     align-items: center;
     position: relative;
     flex-direction: column;
     justify-content: center;
+    width: 350px;
   }
 
   :local(.eventListHeader){
@@ -41,13 +42,12 @@
       display: inline-block;
       margin-top: 10px;
     }
-  
+
     :local(.viewAll:hover){
     text-decoration: underline;
     }
-  
+
     /* End Refresh Button */
 
   :local(.eventList)::-webkit-scrollbar { width: 0; }
 
- 
