--- a/src/Pages/Home/components/EventListItem/EventListItem.css
+++ b/src/Pages/Home/components/EventListItem/EventListItem.css
@@ -6,10 +6,16 @@
     padding: 0 20px;
     font-size: 15px;
     box-sizing: border-box;
-    font-weight: 600;
+    font-weight: 400;
     height: 40px;
     width: 100%;
-    color: #000;
-    background: #3f51b5ab;
+    color: #fff;
+    background: #1f8be0;
+    white-space: nowrap;
     border-bottom: 1px solid #00000061;
+  }
+
+  :local(.eventItem > span:first-child){
+    overflow: hidden;
+    width: 290px;
   }
