--- a/src/Pages/Login/components/Login/Login.css
+++ b/src/Pages/Login/components/Login/Login.css
@@ -1,9 +1,22 @@
 :local(.formContainer){
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #98b3dc;
+  position: relative;
+  top: 110px;
+  padding: 16px 24px 24px;
+  max-width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12);
+  border-radius: 4px;
+}
+
+:local(.formContainer .default-input){
+  border-radius: none;
+}
+
+  :local(.formContainer>h1){
+    font-weight: normal;
   }
