--- a/src/Pages/Login/components/LoginForm/LoginForm.css
+++ b/src/Pages/Login/components/LoginForm/LoginForm.css
@@ -1,17 +1,27 @@
+
+
 .register-form{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    width: 50%;
-    max-width: 400px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
   }
   .register-form>div{
     display: flex;
     flex-direction: column;
+    margin-bottom: 15px;
   }
+
 
   .error-message{
     color:red;
     margin-top: -19px;
+  }
+
+  .register-button{
+    color: #fff;
+    background-color: #2196f3;
+    padding: 10px 20px;
+    margin-top: 10px;
   }
