--- a/src/Pages/Registration/components/RegistrationForm/RegistrationForm.css
+++ b/src/Pages/Registration/components/RegistrationForm/RegistrationForm.css
@@ -15,3 +15,10 @@
     color:red;
     margin-top: -19px;
   }
+
+  .register-button{
+    color: #fff;
+    background-color: #2196f3;
+    padding: 10px 20px;
+    margin-top: 10px;
+  }
