--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,8 +5,8 @@
     padding: 10px;
     display: flex;
     position: absolute;
-    background: #000000;
-    opacity: 0.6;
+    background: #2196f3;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
     justify-content: flex-end;
   }
 :local(.addEvent){
@@ -27,9 +27,10 @@
 }
 
 :local(.profileImg){
+  display: none;
   width:40px;
   height: 40px;
-  display: inline-block;
+  /* display: inline-block; */
   background: cadetblue;
 }
 
@@ -62,4 +63,5 @@
   width: 40px;
   font-size: 32px;
   margin-right: 20px;
+  box-sizing: content-box;
 }
