--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@ h2{
   transition: all 0.2s;
 }
 
+.react-datetimerange-picker__wrapper{
+  border: none;
+}
+
 .default-input:hover, .default-input:active,.default-input:focus{
   border-bottom: 3px solid #000;
 }
