--- a/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
+++ b/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
@@ -8,15 +8,28 @@
     top: 0;
     background: rgba(0,0,0,0.2);
   }
-  .disable-button{
+    .disable-button:disabled{
     background: gray;
     color: #b8b4b4;
     border: none;
+    box-shadow:none;
+  }
+  .disable-button:disabled:hover{
+    cursor: default;
+    box-shadow:none;
+  }
+  .disable-button{
+    background: #42ca9d;
+    color: #f4f5f7;
+    border: none;
     text-transform: uppercase;
+    cursor: pointer;
     font-size: 20px;
     border-radius: 4px;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12);
   }
-  .addNewEvent.active{
+
+ .addNewEvent.active{
     display:flex!important;
   }
 
