--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -18,7 +18,7 @@
   background: #26bd26;
 }
 :local(.profile){
-  padding-left: 20px;
+  padding-right: 20px;
 }
 
 :local(.profileName){
@@ -27,11 +27,19 @@
 }
 
 :local(.profileImg){
-  display: none;
+  /* display: none; */
   width:40px;
   height: 40px;
+  /* box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12); */
   /* display: inline-block; */
   background: cadetblue;
+  border-radius: 3px;
+  /* cursor: pointer; */
+  transition: all 1s;
+}
+
+:local(.profileImg:hover){
+  /* box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14), 0px 3px 14px 2px rgba(0,0,0,0.12); */
 }
 
 :local( .burger){
