--- a/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
+++ b/src/Pages/Home/components/AddNewEvent/AddNewEvent.css
@@ -64,7 +64,9 @@
     width: 100%;
     max-width: 500px;
   }
-
+  .date-picker-container{
+    display: flex;
+  }
   .add-me-button{
     background: none;
     border: none;
