--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,8 @@
     top: 0;
     background: #2196f3;
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
-    justify-content: flex-end;
+    justify-content: space-between;
+    z-index: 1;
   }
 :local(.addEvent){
   cursor: pointer;
@@ -73,4 +74,14 @@
   font-size: 32px;
   margin-right: 20px;
   box-sizing: content-box;
+}
+
+:local(.WelcomeText){
+  color: white;
+  font-size: 20px;
+  margin: 0;
+  align-self: center;
+}
+:local(.buttonContainer){
+  display: flex;
 }
